--- a/repleetfrontend.client/src/App.css
+++ b/repleetfrontend.client/src/App.css
@@ -13,3 +13,17 @@ th, td {
 }
 
     */
+
+
+.containerbox {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    margin-top: 5rem;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px gray;
+    background-color: white;
+    padding: 20px;
+    text-align: left;
+}
